# bicepbuilder

./: README.md  pyproject.toml
bicepbuilder/: __init__.py  _deployment.py  _utils.py  _writer.py  expressions.py
bicepbuilder/_generator/: __init__.py  _nodes.py  _utils.py
bicepbuilder/modules/: __init__.py
bicepbuilder/modules/aad/: __init__.py
bicepbuilder/modules/alerts_management/: __init__.py
bicepbuilder/modules/api_management/: __init__.py
bicepbuilder/modules/app/: __init__.py
bicepbuilder/modules/app_configuration/: __init__.py
bicepbuilder/modules/automation/: __init__.py
bicepbuilder/modules/batch/: __init__.py
bicepbuilder/modules/cache/: __init__.py
bicepbuilder/modules/cdn/: __init__.py
bicepbuilder/modules/communication/: __init__.py
bicepbuilder/modules/compute/: __init__.py
bicepbuilder/modules/consumption/: __init__.py
bicepbuilder/modules/container_instance/: __init__.py
bicepbuilder/modules/container_service/: __init__.py
bicepbuilder/modules/data_factory/: __init__.py
bicepbuilder/modules/data_protection/: __init__.py
bicepbuilder/modules/databricks/: __init__.py
bicepbuilder/modules/db_for_my_sql/: __init__.py
bicepbuilder/modules/desktop_virtualization/: __init__.py
bicepbuilder/modules/dev_ops_infrastructure/: __init__.py
bicepbuilder/modules/dev_test_lab/: __init__.py
bicepbuilder/modules/digital_twins/: __init__.py
bicepbuilder/modules/document_db/: __init__.py
bicepbuilder/resources/: __init__.py
samples/: cloudmachine.py
samples/infra/: cloudmachine.bicep  main.bicep
(+780 files in other folders)
